--- a/app/app/src/main/res/layout/activity_connect.xml
+++ b/app/app/src/main/res/layout/activity_connect.xml
@@ -13,7 +13,7 @@
         android:clickable="false"
         android:fontFamily="@font/segoebold"
         android:text="@string/control_the_car"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="62dp"
@@ -103,12 +103,12 @@
     <Button
         android:id="@+id/buttonStop"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="66dp"
-        android:layout_height="68dp"
+        android:layout_width="65dp"
+        android:layout_height="64dp"
         android:background="@drawable/ic_pan_tool_24px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.927"
+        app:layout_constraintHorizontal_bias="0.916"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.956" />
@@ -119,7 +119,7 @@
         android:layout_height="38dp"
         android:fontFamily="@font/segoebold"
         android:text="@string/stop"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
