--- a/app/app/src/main/res/layout/activity_connect.xml
+++ b/app/app/src/main/res/layout/activity_connect.xml
@@ -22,12 +22,14 @@
     <ToggleButton
         android:id="@+id/toggleDriveMode"
         style="?android:attr/borderlessButtonStyle"
-        android:background="@drawable/button_help"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_help"
         android:text="@string/manual"
+        android:textColor="#FFFFFF"
         android:textOff="@string/manual"
         android:textOn="@string/automatic"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
